--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Document</title>
   </head>
   <body>
+    <header class="header">
+      <h1>Tic Tac Toe</h1>
+    </header>
+    <main>
+      <div class="main1"></div>
+      <div class="main2"></div>
+      <div class="main3"></div>
+      <div class="main4"></div>
+      <div class="main5"></div>
+      <div class="main6"></div>
+      <div class="main7"></div>
+      <div class="main8"></div>
+      <div class="main9"></div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
