feat: input for user's name and to start game

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <div class="main"></div>
       <div class="main"></div>
       <div class="main"></div>
+
+      <input type="text" name="name" id="" class="input_name" />
+      <input type="button" value="Start Game!" class="start_game" />
     </main>
     <script src="index.js"></script>
   </body>
