feat: add input and change class name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div class="main"></div>
       <div class="main"></div>
 
-      <input type="text" name="name" id="" class="input_name" />
+      <input type="text" name="name" id="" class="input_player1" />
+      <input type="text" name="name" id="" class="input_player2" />
       <input type="button" value="Start Game!" class="start_game" />
     </main>
     <script src="index.js"></script>
